tj-service.yml
apiVersion: v1
kind: Service
metadata:
  name: techjargon-service
spec:
  ports:
  - name: http
    port: 12909
    protocol: TCP
    targetPort: 12909
  selector:
    app: techjargon
  sessionAffinity: None
